Fix:: Dark Mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,22 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  transition: all .5s ease-in-out;
+}
+
 body {
   font-family: 'Montserrat', sans-serif, Arial, Helvetica;
+}
+
+.EaseLink {
+  -webkit-text-stroke-width: 1.5px;
+  -webkit-text-stroke-color: #b46b41;
+  color: transparent;
+  font-weight: 900;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #InputBox label {
@@ -25,14 +39,13 @@ body {
 
 .toggle-switch {
   --light: #ecf4f8;
-  --dark: #070F13;
+  --dark: #122630;
   width: 50px;
   height: 25px;
   position: relative;
 }
 
 .switch-label {
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.466);
   position: absolute;
   width: 100%;
   height: 25px;
